@@ -1,24 +1,19 @@
 [tox]
-# envlist = pep8,py35,py27,py34,py33,py26,pypy,jython
-#envlist = py35,py27,py34,py33,py26,pypy,jython
 envlist = pep8,py36,py27,py35,py34,pypy
 
 [testenv]
 commands =
-    /bin/bash -c 'py.test _test/test_*.py'
+    /bin/bash -c 'pytest _test/test_*.py'
 deps =
     pytest
     flake8==2.5.5
     ruamel.std.pathlib
 
-[pytest]
-norecursedirs = test/lib .tox
-
 [testenv:pep8]
 commands =
-   flake8 --exclude convert,cmd,base {posargs}
+    flake8 {posargs}
 
 [flake8]
 show-source = True
 max-line-length = 95
-exclude = _test/lib,.hg,.git,.tox,dist,.cache,__pycache__,ruamel.zip2tar.egg-info,try_*
+exclude = _test/lib,.hg,.git,.tox,dist,.cache,__pycache__,ruamel.zip2tar.egg-info
