@@ -1,3 +1,6 @@
+[0, 15, 8]: 2017-06-15
+  - allow plug-in install via ``install ruamel.yaml[jinja2]``
+
 [0, 15, 7]: 2017-06-14
   - add plug-in mechanism for load/dump pre resp. post-processing
 
